# d_http_client_benchmark

./: .bench.sh.swp  LICENSE  README.md  bench.sh  benchmarks.json  benchmarks.md  curl_run.sh  plot_whisker.py
.github/: FUNDING.yml
.github/workflows/: benchmark.yml
dlang-arsd/: .gitignore  dub.json
dlang-arsd/source/: app.d
dlang-curl/: .gitignore  dub.json
dlang-curl/source/: app.d
dlang-requests/: .gitignore  dub.json
dlang-requests/source/: app.d
dlang-server/: .gitignore  dub.json
dlang-server/source/: app.d
dlang-vibed/: .gitignore  dub.json
dlang-vibed/source/: app.d
dotnet-http-client/: Program.cs  dotnet-http-client.csproj
go-http-client/: go-http-client.go
python-httpx/: python-httpx.py
python-requests/: python-requests.py
python-urllib/: python-urllib.py
python-urllib3/: python-urllib3.py
r-httr/: r-httr.r
r-httr2/: r-httr2.r
rust-attohttpc/src/: main.rs
rust-hyper/: Cargo.toml
rust-hyper/src/: main.rs
rust-reqwest/src/: main.rs
rust-ureq/src/: main.rs
