[package]
name = "rust-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.27", features = ["client", "http1", "runtime"] }
tokio = { version = "1.29.1", features = ["rt"] }

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
